# wtfbbq

./: Cargo.toml  LICENSE  README.md
src/: controller.rs  main.rs
static/: index.html  style.css
