[package]
name = "wtfbbq"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitfield = "0.13.2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
pid = "3.0.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["tls"] }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
rppal = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["time"] }
